# wg-easy-api

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
tests/: config.py  test_wg_easy.py
wg_easy_api/: __init__.py  api.py  models.py  wg_easy.py
